--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -145,9 +145,9 @@
     background: var(--main-secondary);
   }
   
-  /* Welcome section */
+  /* About section */
   
-  .welcome-section {
+  .about {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,7 +158,7 @@
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   }
   
-  .welcome-section > p {
+  .about > p {
     font-size: 3rem;
     font-weight: 200;
     font-style: italic;
