--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -153,7 +153,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;
+    height: 80%;
     background-color: #000;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   }
