--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,10 @@
   font-size: calc(10px + 2vmin);
   font-family: sans-serif;
   color: white;
-  /* margin-top: 2em; */
+}
+
+h1, h2{
+  margin-top: 2em;
 }
 
 a {
@@ -22,7 +25,7 @@ a {
   background-color: #343434;
   position: fixed;
   top: 0;
-  border-bottom: .25em solid gray;
+  border-bottom: .2em solid gray;
   width: 100%;
 }
 
@@ -31,7 +34,7 @@ a {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: .75em 1em;
+  padding: .75em;
   text-decoration: none;
 }
 
